# optfunc2

./: .gitignore  README.md  autocall-1.0.0-py3-none-any.whl  changelog  demo_hex.sh  pyproject.toml  requirements.txt  upload.md
src/: example_calc.py  example_file_operator.py  example_hex_converter.py  test.py  test_hex_support.py  test_optfunc2.py  test_review_bugs.py
src/autocall/: __init__.py  parser.py
src/optfunc2/: __init__.py  parser.py
