[tool.poetry]
name = "optfunc2"
version = "0.2.0"
description = "Generate options from function."
authors = ["bajeer <z_bajer@yeah.net>"]
readme = "README.md"
license = "PyPA"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
prettytable = "^3.14.0"
docstring_parser = "^0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://gitee.com/z-bajer/autocall"
"Bug Reports" = "https://gitee.com/z-bajer/autocall/issues"
"Source" = "https://gitee.com/z-bajer/autocall"
