[project]
name = "optfunc2"
version = "0.2.6"
description = "Generate command line options and help/tips from function automatically."
authors = [
    {name = "bajeer",email = "z-bajeer@yeah.net"}
]
license = {text = "PyPA"}
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "docstring-parser (>=0.16,<0.17)",
    "prettytable (==3.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
"Homepage" = "https://github.com/yjloong/optfunc2"
"Bug Tracker" = "https://github.com/yjloong/optfunc2/issues"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-xdist = "^3.6.1"

